docs: Fix mobile logo collapsed

--- a/site/theme/static/header.less
+++ b/site/theme/static/header.less
@@ -42,6 +42,7 @@
 
     #logo {
       padding-left: 0;
+      padding-right: 16px;
     }
 
     .ant-menu {
